test/src/e2e_vm_tests/test_programs/should_fail/attributes_missing_annotated_item/src/trailing_single_inner_doc_comment.sw
library;

//! This is a misplaced inner doc comment.